Header fix, textwrap and empty message check

--- a/src/css/partials/_header.scss
+++ b/src/css/partials/_header.scss
@@ -28,6 +28,7 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    height: 100%;
     p {
       font-family: 'Roboto', sans-serif;
       font-size: 16px;
