--- a/src/css/partials/_textbox.scss
+++ b/src/css/partials/_textbox.scss
@@ -34,7 +34,7 @@ main {
       
       .messageText {
         @include font-style(16px, $bg-color,$theme-color2);
-        width: max-content;
+        max-width: 100%;
         float: right;
 
         border-radius: 10px;
@@ -45,7 +45,7 @@ main {
     .inactive-user {
       .messageText {
         @include font-style(16px, $theme-color2, $bg-color*1.3);
-        width: max-content;
+        max-width: 100%;
 
         border-radius: 10px;
         padding: 5px;
